tests/fixtures/invalid/pow_str_set.py
# Cannot call pow() with Str, Set[int]
x = pow("hello", {1, 2, 3})
